--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,15 @@
+contourpy==1.3.1
+cycler==0.12.1
 docutils==0.21.2
+fonttools==4.57.0
 jsonpickle==4.0.5
+kiwisolver==1.4.8
+matplotlib==3.10.1
 numpy==2.2.4
+packaging==24.2
 pandas==2.2.3
+pillow==11.1.0
+pyparsing==3.2.3
 python-dateutil==2.9.0.post0
 pytz==2025.2
 six==1.17.0
